--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ include_directories("/home/cheytakker/CLionProjects/websocketpp")
 
 
 include_directories(include)
-add_library(server_lib INTERFACE)
+add_library(server_lib INTERFACE
+        include/worker_tasks.h)
 target_include_directories(server_lib INTERFACE include)
 
 # Find ZeroMQ library
@@ -20,7 +21,8 @@ find_library(ZMQ_LIBRARY NAMES zmq)
 
 add_executable(MatchingEngine main.cpp
         include/websockets_data_publisher.h
-        include/zmq_order_listener_updater.h)
+        include/zmq_order_listener_updater.h
+        include/worker_tasks.h)
 
 # Link Boost libraries to your project
 target_link_libraries(MatchingEngine ${Boost_LIBRARIES} server_lib)
